[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Objects/Interactables/Present.gd" type="Script" id=1]
[ext_resource path="res://Objects/Collision/CollidableBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://BattleSystem/ItemUsage.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Present Box/Present Animations SS.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Rendering/DepthTestFloorSprite.gd" type="Script" id=5]
[ext_resource path="res://Assets/General/Shadows/square shadow modulatable.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Done"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollidableBox:animation_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollidableBox:animation_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollidableBox:texture_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -0.5, 21 ), Vector2( -0.5, 20 ), Vector2( -0.5, 18 ), Vector2( -0.5, 16 ), Vector2( -0.5, 15 ), Vector2( -0.5, 14 ), Vector2( -0.5, 15 ), Vector2( -0.5, 16 ), Vector2( -0.5, 18 ), Vector2( -0.5, 20 ), Vector2( -0.5, 20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollidableBox:use_collision")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, false, true, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Open Box"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("CollidableBox:animation_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollidableBox:animation_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollidableBox:use_collision")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollidableBox:texture_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.5, 21 ) ]
}

[node name="PresentBase" type="Node2D"]
script = ExtResource( 1 )

[node name="CollidableBox" parent="." instance=ExtResource( 2 )]
tile_size = Vector2( 44, 20 )
grid_size = Vector2( 0.9, 0.9 )
texture = ExtResource( 4 )
texture_offset = Vector2( -0.5, 21 )
height = 20.0
floor_height = 95.0
preview_collision_box = false
animation_hframes = 9
animation_vframes = 3
animation_frame = 8
detect_touches = true
always_update = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.6
anims/Done = SubResource( 1 )
anims/Idle = SubResource( 2 )
"anims/Open Box" = SubResource( 4 )
anims/RESET = SubResource( 3 )

[node name="SquareShadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -7.10543e-15 )
scale = Vector2( 0.623138, 0.550726 )
texture = ExtResource( 6 )
script = ExtResource( 5 )
always_update = true

[node name="ItemUsage" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 1, -119 )
z_index = 1
